# zetohm-dotter

./: .gitignore  1st-step.md  Creating-worktree.md  README.md  deploy-linux.sh  deploy-windows.bat  deploy-windows.ps1  dotter-add.bat  dotter-deploy-linux.sh  dotter-list.bat  dotter-ls.ps1  dotter-remove.bat  dotter-undeploy-linux.sh  module-fnm.md  module-powershell.md
.claude/: settings.local.json
.dotter/: cache.toml  global.toml  local-linux.toml  local-windows.toml  local.toml
check-prerequisites/: Cargo.toml  History.md  build.rs
check-prerequisites/src/: main.rs
docs/: linux-wezterm-font.md
fnm/: fnm-init.ps1
linux/: wezterm.lua
linux/shell/: bashrc  profile  zshrc
powershell/: Microsoft.PowerShell_profile.ps1
starship/: starship.toml
wezterm/: wezterm.lua
windows/powershell/: Microsoft.PowerShell_profile.ps1
windows/starship/: starship-init.ps1
windows/zoxide/: zoxide-init.ps1
